added comments, documentation and bug fixes with added functionalities

--- a/src/main/resources/ENV-PROD/application.properties
+++ b/src/main/resources/ENV-PROD/application.properties
@@ -1,8 +1,8 @@
 environment=${filter.name}
 
 MONGO_DB_NAME=craftsvillatest
-MONGO_HOST=localhost
+MONGO_HOST=35.154.43.96
 MONGO_PORT=27017
-useAuthentication=false
+useAuthentication=true
 MONGO_USERNAME=parag
-MONGO_PASSWD=poiuy123
+MONGO_PASSWD=12345poiuy
