--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
 	<name>backendtest Maven Webapp</name>
 	<url>http://maven.apache.org</url>
 	<properties>
-		<application.name>Listing</application.name>
+		<application.name>craftsvilla_backendtest</application.name>
 		<spring.version>4.2.1.RELEASE</spring.version>
 		<jackson.version>2.6.2</jackson.version>
 		<spring-boot.version>1.2.6.RELEASE</spring-boot.version>
@@ -28,54 +28,6 @@
 			</activation>
 			<properties>
 				<filter.name>LOCAL</filter.name>
-			</properties>
-		</profile>
-		<profile>
-			<id>dev</id>
-			<activation>
-				<property>
-					<name>env</name>
-					<value>dev</value>
-				</property>
-			</activation>
-			<properties>
-				<filter.name>DEV</filter.name>
-			</properties>
-		</profile>
-		<profile>
-			<id>wave</id>
-			<activation>
-				<property>
-					<name>env</name>
-					<value>wave</value>
-				</property>
-			</activation>
-			<properties>
-				<filter.name>WAVE</filter.name>
-			</properties>
-		</profile>
-		<profile>
-			<id>qa</id>
-			<activation>
-				<property>
-					<name>env</name>
-					<value>qa</value>
-				</property>
-			</activation>
-			<properties>
-				<filter.name>QA</filter.name>
-			</properties>
-		</profile>
-		<profile>
-			<id>qa1</id>
-			<activation>
-				<property>
-					<name>env</name>
-					<value>qa1</value>
-				</property>
-			</activation>
-			<properties>
-				<filter.name>QA1</filter.name>
 			</properties>
 		</profile>
 		<profile>
@@ -190,9 +142,6 @@
 				<artifactId>maven-surefire-plugin</artifactId>
 				<version>2.5</version>
 				<configuration>
-					<systemPropertyVariables>
-						<environment>prod</environment>
-					</systemPropertyVariables>
 				</configuration>
 			</plugin>
 		</plugins>
