added more documentation and bug fixes

--- a/src/main/resources/ENV-PROD/application.properties
+++ b/src/main/resources/ENV-PROD/application.properties
@@ -1,7 +1,7 @@
 environment=${filter.name}
 
 MONGO_DB_NAME=craftsvillatest
-MONGO_HOST=35.154.43.96
+MONGO_HOST=localhost
 MONGO_PORT=27017
 useAuthentication=true
 MONGO_USERNAME=parag
